--- a/Josh Bruce/Josh Bruce/Base.lproj/Main.storyboard
+++ b/Josh Bruce/Josh Bruce/Base.lproj/Main.storyboard
@@ -63,16 +63,16 @@
             </objects>
             <point key="canvasLocation" x="1110" y="1163"/>
         </scene>
-        <!--Menu Table View Controller-->
+        <!--Josh Bruce-->
         <scene sceneID="sVo-LE-0G3">
             <objects>
-                <tableViewController automaticallyAdjustsScrollViewInsets="NO" id="0dE-GE-BYx" customClass="MenuTableViewController" customModule="Josh_Bruce" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="Josh Bruce" id="0dE-GE-BYx" customClass="MenuTableViewController" customModule="Josh_Bruce" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="120" sectionHeaderHeight="22" sectionFooterHeight="22" id="e2m-l1-kEe">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="aboutCell" rowHeight="120" id="Rnp-cW-SYa" customClass="AboutTableViewCell" customModule="Josh_Bruce" customModuleProvider="target">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="aboutCell" rowHeight="120" id="Rnp-cW-SYa" customClass="AboutTableViewCell" customModule="Josh_Bruce" customModuleProvider="target">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Rnp-cW-SYa" id="hr0-6e-Q1a">
                                     <autoresizingMask key="autoresizingMask"/>
@@ -83,11 +83,21 @@
                                                 <constraint firstAttribute="height" constant="120" id="8Pw-6S-csy"/>
                                             </constraints>
                                         </imageView>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="josh-bruce" translatesAutoresizingMaskIntoConstraints="NO" id="Xq3-8k-UYc" customClass="CircleImage" customModule="Josh_Bruce" customModuleProvider="target">
+                                            <rect key="frame" x="16" y="20" width="80" height="80"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="80" id="1sm-ml-twd"/>
+                                                <constraint firstAttribute="height" constant="80" id="We6-vk-vIs"/>
+                                            </constraints>
+                                        </imageView>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="DWq-w2-SSA" firstAttribute="leading" secondItem="hr0-6e-Q1a" secondAttribute="leading" id="2pM-Mt-oWy"/>
+                                        <constraint firstAttribute="bottom" secondItem="Xq3-8k-UYc" secondAttribute="bottom" constant="20" id="8IZ-F2-bmC"/>
+                                        <constraint firstItem="Xq3-8k-UYc" firstAttribute="leading" secondItem="hr0-6e-Q1a" secondAttribute="leading" constant="16" id="958-Br-JUa"/>
                                         <constraint firstAttribute="trailing" secondItem="DWq-w2-SSA" secondAttribute="trailing" id="9Lb-wv-7Wa"/>
                                         <constraint firstItem="DWq-w2-SSA" firstAttribute="top" secondItem="hr0-6e-Q1a" secondAttribute="top" id="Dmh-J5-cTq"/>
+                                        <constraint firstItem="Xq3-8k-UYc" firstAttribute="top" secondItem="hr0-6e-Q1a" secondAttribute="top" constant="20" id="YcE-w9-2fR"/>
                                         <constraint firstAttribute="bottom" secondItem="DWq-w2-SSA" secondAttribute="bottom" id="xDu-bo-pmk"/>
                                     </constraints>
                                 </tableViewCellContentView>
@@ -133,7 +143,9 @@
                             <outlet property="delegate" destination="0dE-GE-BYx" id="ZyB-0Y-pKa"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="5L8-jl-a5R"/>
+                    <navigationItem key="navigationItem" title="Josh Bruce" id="5L8-jl-a5R">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="d4G-yG-o70"/>
+                    </navigationItem>
                     <connections>
                         <segue destination="mrx-Ze-toG" kind="show" identifier="showCategoryType" id="wp4-iB-Vmm"/>
                         <segue destination="vlZ-1a-mgr" kind="show" identifier="showTimeline" id="2ER-G2-HOx"/>
@@ -469,19 +481,19 @@
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ISu-Er-D6Y">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="87"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gjg-UK-WR1">
                                             <rect key="frame" x="0.0" y="171" width="600" height="87"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tmB-wZ-WkT">
                                             <rect key="frame" x="0.0" y="513" width="600" height="87"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="06M-bi-jfb">
                                             <rect key="frame" x="0.0" y="342" width="600" height="87"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </view>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ufv-IY-8Ck" customClass="CircleButton" customModule="Josh_Bruce" customModuleProvider="target">
                                             <rect key="frame" x="389" y="268" width="64" height="64"/>
@@ -569,15 +581,15 @@
                                         </button>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kol-jl-5Up">
                                             <rect key="frame" x="0.0" y="0.0" width="116" height="600"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                            <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BNi-GF-X6h">
                                             <rect key="frame" x="242" y="0.0" width="116" height="600"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                            <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="unQ-CO-vFh">
                                             <rect key="frame" x="484" y="0.0" width="116" height="600"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                            <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         </view>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ofl-1B-xqz">
                                             <rect key="frame" x="275" y="552" width="51" height="32"/>
